--- a/package.json
+++ b/package.json
@@ -3,27 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@nestjs/platform-express": "^10.2.10",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^27.5.2",
+    
     "@types/node": "^16.18.65",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
-    "axios": "^1.6.2",
-    "cors": "^2.8.5",
+   
     "fabric": "^5.3.0",
-    "multer": "^1.4.5-lts.1",
+   
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-router-dom": "^6.20.0",
+    
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "typescript": "^4.9.5"
+    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,7 +43,7 @@
   },
   "devDependencies": {
     "@types/fabric": "^5.3.6",
-    "@types/multer": "^1.4.11",
-    "@types/react-router-dom": "^5.3.3"
+    
+    "depcheck": "^1.4.7"
   }
 }
